@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-11T16:08:01Z",
+  "timestamp" : "2023-08-12T08:07:58Z",
   "count_outdated" : 1309,
   "uniques_outdated" : 704,
-  "count" : 1323,
-  "uniques" : 712,
+  "count" : 1324,
+  "uniques" : 713,
   "clones" : [
     {
       "timestamp": "2023-07-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -64,6 +64,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
