@@ -1,3 +1,12 @@
+2023-08-12T08:07:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5840250105 # 1815
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
+* notice: last 14d: unq all: 3 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 704 1309 / 712 1323
+* notice: next accum: outdated-unq outdated-all / unq all: 704 1309 / 713 1324
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-29 2023-08-12]
+
 2023-08-11T16:08:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5834678235 # 1813
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-11
